// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page-header quality-profile-header"
>
  <div
    className="note spacer-bottom"
  >
    <NavLink
      end={true}
      to="/profiles"
    >
      quality_profiles.page
    </NavLink>
     / 
    <ForwardRef(Link)
      to={
        Object {
          "pathname": "/profiles",
          "search": "?language=js",
        }
      }
    >
      JavaScript
    </ForwardRef(Link)>
  </div>
  <h1
    className="page-title"
  >
    <ProfileLink
      language="js"
      name="name"
    >
      <span>
        name
      </span>
    </ProfileLink>
  </h1>
  <div
    className="pull-right"
  >
    <ul
      className="list-inline"
      style={
        Object {
          "lineHeight": "24px",
        }
      }
    >
      <li
        className="small spacer-right"
      >
        quality_profiles.updated_
         
        <DateFromNow />
      </li>
      <li
        className="small big-spacer-right"
      >
        quality_profiles.used_
         
        <DateFromNow />
      </li>
      <li>
        <ForwardRef(Link)
          className="button"
          to={
            Object {
              "pathname": "/profiles/changelog",
              "search": "?language=js&name=name",
            }
          }
        >
          changelog
        </ForwardRef(Link)>
      </li>
      <li>
        <withRouter(ProfileActions)
          className="pull-left"
          profile={
            Object {
              "activeDeprecatedRuleCount": 2,
              "activeRuleCount": 10,
              "childrenCount": 0,
              "depth": 1,
              "isBuiltIn": false,
              "isDefault": false,
              "isInherited": false,
              "key": "key",
              "language": "js",
              "languageName": "JavaScript",
              "name": "name",
              "projectCount": 3,
            }
          }
          updateProfiles={[MockFunction]}
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render correctly: for default profile 1`] = `
<div
  className="page-header quality-profile-header"
>
  <div
    className="note spacer-bottom"
  >
    <NavLink
      end={true}
      to="/profiles"
    >
      quality_profiles.page
    </NavLink>
     / 
    <ForwardRef(Link)
      to={
        Object {
          "pathname": "/profiles",
          "search": "?language=js",
        }
      }
    >
      JavaScript
    </ForwardRef(Link)>
  </div>
  <h1
    className="page-title"
  >
    <ProfileLink
      language="js"
      name="name"
    >
      <span>
        name
      </span>
    </ProfileLink>
    <Tooltip
      overlay="quality_profiles.list.default.help"
    >
      <span
        className=" spacer-left badge"
      >
        default
      </span>
    </Tooltip>
  </h1>
  <div
    className="pull-right"
  >
    <ul
      className="list-inline"
      style={
        Object {
          "lineHeight": "24px",
        }
      }
    >
      <li
        className="small spacer-right"
      >
        quality_profiles.updated_
         
        <DateFromNow />
      </li>
      <li
        className="small big-spacer-right"
      >
        quality_profiles.used_
         
        <DateFromNow />
      </li>
      <li>
        <ForwardRef(Link)
          className="button"
          to={
            Object {
              "pathname": "/profiles/changelog",
              "search": "?language=js&name=name",
            }
          }
        >
          changelog
        </ForwardRef(Link)>
      </li>
      <li>
        <withRouter(ProfileActions)
          className="pull-left"
          profile={
            Object {
              "activeDeprecatedRuleCount": 2,
              "activeRuleCount": 10,
              "childrenCount": 0,
              "depth": 1,
              "isBuiltIn": false,
              "isDefault": true,
              "isInherited": false,
              "key": "key",
              "language": "js",
              "languageName": "JavaScript",
              "name": "name",
              "projectCount": 3,
            }
          }
          updateProfiles={[MockFunction]}
        />
      </li>
    </ul>
  </div>
</div>
`;
